--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,17 @@
 version: '3.8'
- 
+
 services:
-  nodejs:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: node-container
-    #restart: unless-stopped
+  king-8:
+    image: david-8
+    build: .
     ports:
-      - "3000:3000"
+      - '6002:3000'
     environment:
-      MONGO_URI: mongodb://mongo:27017/shopping-cart
+      - MONGODB_URI:'mongodb://mongo:27017/shopping-cart'
     depends_on:
-      - mongo
-  mongo:
-      container_name: mongodb-container
-      image: mongo
-      volumes:
-        - ./data:/data/db
-      ports:
-        - 27017:27017
+      - mongodb
+
+  mongodb:
+    image: mongo:latest
+    ports:
+      - '27017:27017'
